# banking

./: .gitignore  Account.cpp  Account.h  CMakeLists.txt  ITransactionValidator.h  README.md  Transaction.cpp  Transaction.h  test_account.cpp  test_transaction.cpp
.github/workflows/: ci.yml
include/banking/: Account.h  Transaction.h
mocks/: MockTransactionValidator.h
src/: Account.cpp  Transaction.cpp
tests/: test_account.cpp  test_real_accounts.cpp  test_transaction.cpp
